@@ -2,6 +2,8 @@
 
 # case-insensitive, allow unknown suffixes
 +I
+# uncomment the line below to filter on url path
+#+P
 
 ### prohibit these
 # pictures
