@@ -41,6 +41,8 @@ Unreleased changes (1.0-dev)
     
 13. NUTCH-485 - Change HtmlParseFilter 's to return ParseResult object instead of Parse object. (Gal Nitzan via dogacan)
 
+14. NUTCH-489 - URLFilter-suffix management of the url path when the url contains some query parameters. (Emmanuel Joke via dogacan)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
